<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">No. of pax</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="split">split</string>
    <string name="reset">reset</string>
    <string name="total">Total Bill: </string>
    <string name="each">Total Each Pays: </string>
</resources>
